package it.unibo.tuprolog.core

import it.unibo.tuprolog.core.List as LogicList

internal abstract class TermImpl : Term

